--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             <p>Safari Hotel is an excellent choice for travelers visiting Hargeysa, offering a family-friendly environment alongside many helpful amenities designed to enhance your stay. The rooms offer air conditioning, and getting online is possible, as free wifi is available, allowing you to rest and refresh with ease. <br>manshalah.
             </p>
             <img src="images/pic-1.jpg" class="user" alt="">
-            <h3>Saed Hassan</h3>
+            <h3>Muslix Ismail</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -353,7 +353,7 @@
                 It's was a very nice place i really like it and i wish to come here again next time.
             </p>
             <img src="images/pic-2.jpg" class="user" alt="">
-            <h3>Saalim Sheekh</h3>
+            <h3>Samira Sheekh</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
