--- a/culturefood.html
+++ b/culturefood.html
@@ -128,14 +128,14 @@
 
 <section class="menu" id="menu">
 
-    <h1 class="heading"> Break <span>Fast</span> </h1>
+    <h1 class="heading"> Culture <span>Food</span> </h1>
 
     <div class="box-container">
 
         <div class="box">
             <img src="images/maincourse/1.png" alt="">
-            <h3>tasty and healty</h3>
-            <div class="price">$15.99 <span>20.99</span></div>
+            <h3>Shuuro</h3>
+            <div class="price">$3.00 <span></span></div>
             <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
         </div>
 
