--- a/culturefood.html
+++ b/culturefood.html
@@ -40,12 +40,12 @@
         <div class="fas fa-bars" id="menu-btn"></div>
     </div>
 
-    <div class="search-form">
+    <!-- <div class="search-form">
         <input type="search" id="search-box" placeholder="search here...">
         <label for="search-box" class="fas fa-search"></label>
-    </div>
+    </div> -->
 
-    <div class="cart-items-container">
+    <!-- <div class="cart-items-container">
         <div class="cart-item">
             <span class="fas fa-times"></span>
             <img src="images/cart-item-1.png" alt="">
@@ -79,7 +79,7 @@
             </div>
         </div>
         <a href="#" class="btn">checkout now</a>
-    </div>
+    </div> -->
 
 </header>
 
@@ -138,6 +138,42 @@
             <div class="price">$3.00 <span></span></div>
             <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
         </div>
+
+        <div class="box">
+            <img src="images/maincourse/1.png" alt="">
+            <h3>Faracad</h3>
+            <div class="price">$3.00 <span></span></div>
+            <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
+        </div>
+
+        <div class="box">
+            <img src="images/maincourse/1.png" alt="">
+            <h3>Heed</h3>
+            <div class="price">$3.00 <span></span></div>
+            <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
+        </div>
+
+        <div class="box">
+            <img src="images/maincourse/1.png" alt="">
+            <h3>Garow</h3>
+            <div class="price">$3.00 <span></span></div>
+            <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
+        </div>
+
+        <div class="box">
+            <img src="images/maincourse/1.png" alt="">
+            <h3>Digir</h3>
+            <div class="price">$3.00 <span></span></div>
+            <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
+        </div>
+
+        <div class="box">
+            <img src="images/maincourse/1.png" alt="">
+            <h3>Malaje</h3>
+            <div class="price">$3.5 <span></span></div>
+            <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
+        </div>
+
 
     
 
