--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
         <div class="content">
             <h3>what makes Safari Hotel special?</h3>
-           <p>Your visit to Hargeisa will not be complete without a stay at Safari Hotel Hargeisa & Safari Resort & Hotel Borama. <br>
+           <p>Your visit to Hargeisa will not be complete without a stay at Safari Hotel Hargeisa & Safari Resort. <br>
             Safari Hotel Is An Excellent Choice For Travelers Visiting Hargeysa, Offering A Family-Friendly Environment Alongside Many Helpful Amenities Designed To Enhance Your Stay. Allowing You To Rest And Refresh With Ease.
             <br>
         contact us : <br>
