--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <h3>Break Fast</h3>
       <!-- <div class="price">$15.99 <span>20.99</span></div> -->
             <div class=""><span>Omilite egg, pancake...</span></div>
-            <a href="Breakfast.html" class="btn">Read More</a>
+            <a href="Breakfast.html" class="btn">See More</a>
         </div>
 
         <div class="box">
@@ -179,7 +179,7 @@
             <h3>Main Course</h3>
       <!-- <div class="price">$15.99 <span>20.99</span></div> -->
             <div class=""><span>Fish, Chicken, Meat...</span></div>
-            <a href="maincourse.html" class="btn">Read More</a>
+            <a href="maincourse.html" class="btn">See More</a>
         </div>
 
         <div class="box">
@@ -187,7 +187,7 @@
             <h3>Compliant & Pasta</h3>
       <!-- <div class="price">$15.99 <span>20.99</span></div> -->
             <div class=""><span>Compliment, Pasta...</span></div>
-            <a href="complaintandpasta.html" class="btn">Read More</a>
+            <a href="complaintandpasta.html" class="btn">See More</a>
         </div>
 
         <div class="box">
@@ -195,7 +195,7 @@
             <h3>Soups</h3>
       <!-- <div class="price">$15.99 <span>20.99</span></div> -->
             <div class=""><span>Chickensoup, Fishsoup...</span></div>
-            <a href="soup.html" class="btn">Read More</a>
+            <a href="soup.html" class="btn">See More</a>
         </div>
 
         <div class="box">
@@ -203,7 +203,7 @@
             <h3>Fast food</h3>
       <!-- <div class="price">$15.99 <span>20.99</span></div> -->
             <div class=""><span>Burger, Sandwich, Shawarma...</span></div>
-            <a href="fastfood.html" class="btn">Read More</a>
+            <a href="fastfood.html" class="btn">See More</a>
         </div>
 
         <div class="box">
@@ -211,7 +211,7 @@
             <h3>Dessert</h3>
       <!-- <div class="price">$15.99 <span>20.99</span></div> -->
             <div class=""><span>OrangeCake,RedValvet...</span></div>
-            <a href="desert.html" class="btn">Read More</a>
+            <a href="desert.html" class="btn">See More</a>
         </div>
 
         <div class="box">
@@ -219,7 +219,7 @@
             <h3>Cold Drinks</h3>
       <!-- <div class="price">$15.99 <span>20.99</span></div> -->
             <div class=""><span>Orange, MajitoMint, Cocktail....</span></div>
-            <a href="colddrink.html" class="btn">Read More</a>
+            <a href="colddrink.html" class="btn">See More</a>
         </div>
 
         <div class="box">
@@ -227,7 +227,7 @@
             <h3>Hot Drinks</h3>
       <!-- <div class="price">$15.99 <span>20.99</span></div> -->
             <div class=""><span>Americano, SomaliTea, Expresso...</span></div>
-            <a href="hotdrink.html" class="btn">Read More</a>
+            <a href="hotdrink.html" class="btn">See More</a>
         </div>
 
         <div class="box">
@@ -235,7 +235,7 @@
             <h3>Cultural Food</h3>
       <!-- <div class="price">$15.99 <span>20.99</span></div> -->
             <div class=""><span>Shuuro, Fracad, Heed, digir...</span></div>
-            <a href="culturefood.html" class="btn">Read More</a>
+            <a href="culturefood.html" class="btn">See More</a>
         </div>
 
     </div>
@@ -444,7 +444,7 @@
                 <a href="#" class="title">Join Safari Gym for better and healthier life </a>
                 <span>#gym #fitness #safari</span>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p>
-                <a href="https://www.facebook.com/watch/?v=549616916776640" class="btn">read more</a>
+                <a href="https://www.facebook.com/watch/?v=549616916776640" class="btn">See more</a>
             </div>
         </div>
 
@@ -456,7 +456,7 @@
                 <a href="#" class="title">Feel the Summer With Our Pina Colada !</a>
                 <span>#summer #summervibes #love </span>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p>
-                <a href="https://www.facebook.com/watch/?v=320245819337678" class="btn">read more</a>
+                <a href="https://www.facebook.com/watch/?v=320245819337678" class="btn">See more</a>
             </div>
         </div>
 
@@ -468,7 +468,7 @@
                 <a href="#" class="title">Welcome to Swimming pool and entertainment.</a>
                 <span>info:+252 570009 063-6355556</span>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p>
-                <a href="https://www.facebook.com/watch/?v=1127416931008229" class="btn">read more</a>
+                <a href="https://www.facebook.com/watch/?v=1127416931008229" class="btn">See more</a>
             </div>
         </div>
 
