--- a/index.html
+++ b/index.html
@@ -282,19 +282,16 @@
 
 
         <form action="">
-            <!-- <h3>get in touch</h3> -->
-            <!-- <h1 class="heading"> Feed <span>Back</span> </h1> -->
+            
             <div class="inputBox">
-<!-- 
-                <span class="fas fa-user"></span>
-                <input type="text" placeholder="name"> -->
+
 
             </div>
             <div class="inputBox" id="contact">
                 <span class="fas fa-envelope"></span>
                 <input type="email" placeholder="email">
             </div>
-            <div class="inputBox">
+            <div >
             
  
             <a href=" mailto:safarihotelhargeisa@hotmail.com?subject= Customer Feedback " class="btn" >Send Feedback</a>
