--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
 
     <div class="icons">
-        <!-- <div class="fas fa-search" id="search-btn"></div> -->
+        <div class="fas fa-search" id="search-btn"></div>
         <div class="fas fa-shopping-cart" id="cart-btn"></div>
         <div class="fas fa-bars" id="menu-btn"></div>
     </div>
@@ -50,7 +50,38 @@
     </div>
 
     <div class="cart-items-container">
-     
+        <!-- <div class="cart-item">
+            <span class="fas fa-times"></span>
+            <img src="images/cart-item-1.png" alt="">
+            <div class="content">
+                <h3>cart item 01</h3>
+                <div class="price">$15.99/-</div>
+            </div>
+        </div>
+        <div class="cart-item">
+            <span class="fas fa-times"></span>
+            <img src="images/cart-item-2.png" alt="">
+            <div class="content">
+                <h3>cart item 02</h3>
+                <div class="price">$15.99/-</div>
+            </div>
+        </div>
+        <div class="cart-item">
+            <span class="fas fa-times"></span>
+            <img src="images/cart-item-3.png" alt="">
+            <div class="content">
+                <h3>cart item 03</h3>
+                <div class="price">$15.99/-</div>
+            </div>
+        </div>
+        <div class="cart-item">
+            <span class="fas fa-times"></span>
+            <img src="images/cart-item-4.png" alt="">
+            <div class="content">
+                <h3>cart item 04</h3>
+                <div class="price">$15.99/-</div>
+            </div>
+        </div> -->
         <a href="https://shorturl.at/hoOQ0" class="btn" target="_blank" >Order Food now</a>
     </div>
 
@@ -100,7 +131,7 @@
            <p>Your visit to Hargeisa will not be complete without a stay at Safari Hotel Hargeisa & Safari Resort. <br>
             Safari Hotel Is An Excellent Choice For Travelers Visiting Hargeysa, Offering A Family-Friendly Environment Alongside Many Helpful Amenities Designed To Enhance Your Stay. Allowing You To Rest And Refresh With Ease.
             <br>
-        contact us : <br>
+        contact us : 0637111111 <br>
         Telphone : 2 570000 <br>
         Email : safarihotelhargeisa@hotmail.com
 
