--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
 
     <div class="icons">
-        <div class="fas fa-search" id="search-btn"></div>
+        <div class="fas f-search" id="search-btn"></div>
         <div class="fas fa-shopping-cart" id="cart-btn"></div>
         <div class="fas fa-bars" id="menu-btn"></div>
     </div>
@@ -131,9 +131,9 @@
            <p>Your visit to Hargeisa will not be complete without a stay at Safari Hotel Hargeisa & Safari Resort. <br>
             Safari Hotel Is An Excellent Choice For Travelers Visiting Hargeysa, Offering A Family-Friendly Environment Alongside Many Helpful Amenities Designed To Enhance Your Stay. Allowing You To Rest And Refresh With Ease.
             <br>
-        contact us : 0637111111 <br>
-        Telphone : 2 570000 <br>
-        Email : safarihotelhargeisa@hotmail.com
+        contact us : 7111111 <br>
+        Telphone   : 2 570000 <br>
+        Email      : safarihotelhargeisa@hotmail.com
 
         
         
@@ -350,7 +350,7 @@
             <div class="content">
                 <a href="#" class="title">Join Safari Gym for better and healthier life </a>
                 <span>#gym #fitness #safari</span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p>
+                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p> -->
                 <a href="https://www.facebook.com/watch/?v=549616916776640" class="btn">See more</a>
             </div>
         </div>
@@ -362,7 +362,7 @@
             <div class="content">
                 <a href="#" class="title">Feel the Summer With Our Pina Colada !</a>
                 <span>#summer #summervibes #love </span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p>
+                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p> -->
                 <a href="https://www.facebook.com/watch/?v=320245819337678" class="btn">See more</a>
             </div>
         </div>
@@ -374,7 +374,7 @@
             <div class="content">
                 <a href="#" class="title">Welcome to Swimming pool and entertainment.</a>
                 <span>info:+252 570009 063-6355556</span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p>
+                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p> -->
                 <a href="https://www.facebook.com/watch/?v=1127416931008229" class="btn">See more</a>
             </div>
         </div>
