--- a/culturefood.html
+++ b/culturefood.html
@@ -131,42 +131,42 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="images/maincourse/1.png" alt="">
+            <img src="images/shuuro.png" alt="">
             <h3>Shuuro</h3>
             <div class="price">$3.00 <span></span></div>
             <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
         </div>
 
         <div class="box">
-            <img src="images/maincourse/1.png" alt="">
+            <img src="images/faracad.png" alt="">
             <h3>Faracad</h3>
             <div class="price">$3.00 <span></span></div>
             <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
         </div>
 
         <div class="box">
-            <img src="images/maincourse/1.png" alt="">
+            <img src="images/heed.png" alt="">
             <h3>Heed</h3>
             <div class="price">$3.00 <span></span></div>
             <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
         </div>
 
         <div class="box">
-            <img src="images/maincourse/1.png" alt="">
+            <img src="images/garow.png" alt="">
             <h3>Garow</h3>
             <div class="price">$3.00 <span></span></div>
             <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
         </div>
 
         <div class="box">
-            <img src="images/maincourse/1.png" alt="">
+            <img src="images/digir.png" alt="">
             <h3>Digir</h3>
             <div class="price">$3.00 <span></span></div>
             <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
         </div>
 
         <div class="box">
-            <img src="images/maincourse/1.png" alt="">
+            <img src="images/malaje.png" alt="">
             <h3>Malaje</h3>
             <div class="price">$3.5 <span></span></div>
             <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
