--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         <a href="#blogs">blogs</a>
     </div>
 
-    <div class="credit">created by <span>So Creative Agency</span> | all rights reserved by safari hotel I 2022</div>
+    <div class="credit"> | Designed by <span>Hanad abdi & Guleid ibrahim </span> | Copyright &copy; 2022 So Creative   </div>
 
 </section>
 
