--- a/soup.html
+++ b/soup.html
@@ -367,7 +367,7 @@
         <!-- <a href="#">blogs</a> -->
     </div>
 
-    <div class="credit">created by <span>So Creative Agency</span> | all rights reserved by safari hotel I 2022</div>
+    <div class="credit"> | Designed by <span>Hanad abdi & Guleid ibrahim </span> | Copyright &copy; 2022 So Creative   </div>
 </section>
 
 <!-- footer section ends -->
