--- a/hotdrink.html
+++ b/hotdrink.html
@@ -45,7 +45,7 @@
         <label for="search-box" class="fas fa-search"></label>
     </div>
 
-    <div class="cart-items-container">
+    <!-- <div class="cart-items-container">
         <div class="cart-item">
             <span class="fas fa-times"></span>
             <img src="images/cart-item-1.png" alt="">
@@ -79,7 +79,7 @@
             </div>
         </div>
         <a href="#" class="btn">checkout now</a>
-    </div>
+    </div> -->
 
 </header>
 
@@ -135,7 +135,7 @@
         <div class="box">
             <img src="images/hotedrink/somali tea.png" alt="">
             <h3>Somali_Tea</h3>
-            <div class="price">$1.00 <span></span></div>
+            <div class="price">$0.70 <span></span></div>
             <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
         </div>
 
@@ -143,28 +143,28 @@
         <div class="box">
             <img src="images/hotedrink/camel tea.png" alt="">
             <h3>camel_Tea</h3>
-            <div class="price">$1.00 <span></span></div>
+            <div class="price">$0.70 <span></span></div>
             <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
         </div>
 
         <div class="box">
             <img src="images/hotedrink/leptone tea.png" alt="">
             <h3>Lipton_Tea</h3>
-            <div class="price">$1.00 <span></span></div>
+            <div class="price">$0.70 <span></span></div>
             <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
         </div>
 
         <div class="box">
             <img src="images/hotedrink/lemon tea.png" alt="">
             <h3>Lemon_Tea</h3>
-            <div class="price">$1.00 <span></span></div>
+            <div class="price">$0.70 <span></span></div>
             <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
         </div>
 
         <div class="box">
             <img src="images/hotedrink/green tea.png" alt="">
             <h3>Grean_Tea</h3>
-            <div class="price">$1.00 <span></span></div>
+            <div class="price">$0.70 <span></span></div>
             <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
         </div>
 
@@ -172,7 +172,7 @@
         <div class="box">
             <img src="images/hotedrink/expresso.png" alt="">
             <h3>Expresso</h3>
-            <div class="price">$2.00 <span></span></div>
+            <div class="price">$1.50 <span></span></div>
             <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
         </div>
 
@@ -180,35 +180,35 @@
         <div class="box">
             <img src="images/hotedrink/cappuccino.png" alt="">
             <h3>Cappuccion</h3>
-            <div class="price">$2.00 <span></span></div>
+            <div class="price">$1.50 <span></span></div>
             <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
         </div>
 
         <div class="box">
             <img src="images/hotedrink/americano.png" alt="">
             <h3>Americano</h3>
-            <div class="price">$2.00 <span></span></div>
+            <div class="price">$1.50 <span></span></div>
             <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
         </div>
 
         <div class="box">
             <img src="images/hotedrink/machiato.png" alt="">
             <h3>Macchiato</h3>
-            <div class="price">$2.00 <span></span></div>
+            <div class="price">$1.50 <span></span></div>
             <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
         </div>
 
         <div class="box">
             <img src="images/hotedrink/coffee latte.png" alt="">
             <h3>Coffe latte</h3>
-            <div class="price">$2.00 <span></span></div>
+            <div class="price">$1.50 <span></span></div>
             <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
         </div>
 
         <div class="box">
             <img src="images/hotedrink/hote chocolate.png" alt="">
             <h3>Hot Chocolate</h3>
-            <div class="price">$2.00 <span></span></div>
+            <div class="price">$1.50 <span></span></div>
             <a href="https://shorturl.at/hoOQ0" class="btn">Order Now</a>
         </div>
 
