--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 It's was a very nice place i really like it and i wish to come here again next time.
             </p>
             <img src="images/pic-2.jpg" class="user" alt="">
-            <h3>Samira Sheekh</h3>
+            <h3>Maryan Ruun</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
